--- a/settings/config.yaml.example
+++ b/settings/config.yaml.example
@@ -1,2 +1,10 @@
+# API
+FLASK_URL               : 'localhost'
+FLASK_PORT              : 5000
+FLASK_CALLBACK_URL      : 'localhost:5000'
+
+# VIEW
+
+# Auth
 TWITTER_API_KEY         : ''
 TWITTER_API_SECRET_KEY  : ''
