--- a/settings/config.yaml.example
+++ b/settings/config.yaml.example
@@ -3,6 +3,8 @@ FLASK_URL               : 'localhost'
 FLASK_PORT              : 5000
 FLASK_CALLBACK_URL      : 'localhost:5000'
 
+DATABASE_URL            : 'sqlite:///eroiine.db'
+
 # VIEW
 
 # Auth
