--- a/settings/config.yaml.example
+++ b/settings/config.yaml.example
@@ -3,7 +3,9 @@ FLASK_URL               : 'localhost'
 FLASK_PORT              : 5000
 FLASK_CALLBACK_URL      : 'localhost:5000'
 
-DATABASE_URL            : 'sqlite:///eroiine.db'
+USER_DATABASE_URL       : 'sqlite:///databases/users.db'
+TWEET_DATABASE_URL      : 'sqlite:///databases/eroiine.db'
+SETTINGS_DATABASE_URL   : 'databases/settings.json'
 
 # VIEW
 
