--- a/view/package.json
+++ b/view/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "register-service-worker": "^1.6.2",
+    "rxjs": "^6.3.3",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
+    "vue-rx": "^6.0.1",
     "vuetify": "^1.5.5"
   },
   "devDependencies": {
@@ -25,8 +27,10 @@
     "stylus-loader": "^3.0.2",
     "typescript": "^3.2.1",
     "vue-cli-plugin-pug": "^1.0.7",
+    "vue-cli-plugin-rx": "^0.1.5",
     "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-template-compiler": "^2.5.21",
+    "vue-tweet-embed": "^2.2.1",
     "vuetify-loader": "^1.0.5"
   },
   "postcss": {
